--- a/reserveHotel/templates/reserveHotel/searchHotel.html
+++ b/reserveHotel/templates/reserveHotel/searchHotel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sign up</title>
+    <title>Search hotel</title>
     {% load staticfiles %}
     <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" media="all" />
     <link href="{% static 'reserveHotel/css/style.css' %}" rel="stylesheet" media="all" />
@@ -11,18 +11,16 @@
       {% if error_message %}
       <p class="text-error"><strong>{{ error_message }}</strong></p>
       {% endif %}
-      <form class="form-signup" action="{% url 'rh:searchHotel' %}"
+      <form class="form-search" action="{%  %}"
 	    method="post">
 	{% csrf_token %}
-	<h2 class="form-signup-heading">Please sign up</h2>
-	<input type="text" class="input-block-level" placeholder="Email"
-	       name="email"/>
-	<input type="text" class="input-block-level" placeholder="User name"
-	       name="uname"/>
+	<h2 class="">Search Hotel</h2>
+	<input type="text" class="input-block-level" placeholder="City/Town"
+	       name="city"/>
 	<input type="password" class="input-block-level" placeholder="Password"
 	       name="password"/>
-	<button type="submit" class="btn btn-middle btn-primary">Sign up</button>
-	Already have an account? <a href="{% url 'rh:login' %}" >Sign in</a>
+	<button type="submit" class="btn btn-large-btn-primary">Sing in</button>
+	Haven't an account? <a href="{% %}" >Sign up</a>	
       </form>
     </div>
   </body>
