--- a/reserveHotel/static/reserveHotel/style.css
+++ b/reserveHotel/static/reserveHotel/style.css
@@ -29,3 +29,24 @@ body {
     margin-bottom: 15px;
     padding: 7px 9px;
 }
+
+.form-search {
+    max-width: 300px;
+    padding: 19px 29px 29px;
+    margin: 0 auto 20px;
+    background-color: #fff;
+    border: 1px solid #e5e5e5;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    -webkit-box-shadow: 0 1px 2px #888;
+    -moz-box-shadow: 0 1px 2px #888;
+    box-shadow: 0 1px 2px #888;
+}
+
+.form-search input {
+    font-size: 16px;
+    height: auto;
+    margin-bottom: 15px;
+    padding: 7px 9px;
+}
