add db initial script. add city data transport.

--- a/reserveHotel/templates/reserveHotel/searchResult.html
+++ b/reserveHotel/templates/reserveHotel/searchResult.html
@@ -15,9 +15,9 @@
       <h2>Choose Hotel</h2>
       <table class="table">
 	<caption>Summary</caption>
-	<tr><td>City:</td><td></td></tr>
-	<tr><td>Check in:</td><td></td></tr>
-	<tr><td>Check out:</td><td></td></tr>
+	<tr><td>City:</td><td>{{city_name}}</td></tr>
+	<tr><td>Check in:</td><td>{{checkin_date}}</td></tr>
+	<tr><td>Check out:</td><td>{{checkout_date}}</td></tr>
       </table>
       <button class="btn btn-inverse" type="button"
 	      onclick="location.href=''">
