Add hotel search result. Refresh db initial script.

--- a/reserveHotel/templates/reserveHotel/searchResult.html
+++ b/reserveHotel/templates/reserveHotel/searchResult.html
@@ -25,7 +25,7 @@
       </button>
       <table class="table table-bordered">
       <caption>Search Results</caption>	
-	<thead><td>Name</td><td></td></thead>
+	<thead><td>Name</td><td>{{availableHotels}}</td></thead>
 	<tbody>
 	</tbody>
       </table>
