--- a/reserveHotel/templates/reserveHotel/searchResult.html
+++ b/reserveHotel/templates/reserveHotel/searchResult.html
@@ -27,7 +27,7 @@
       <caption>Search Results</caption>	
 	<thead><td>Name</td><td></td></thead>
 	<tbody>
-	  {% for hotel in avaliableHotels %}
+	  {% for hotel in availableHotels %}
 	  <tr><td>{{hotel.hName}}</td>
 	    <td><a href="{% url 'rh:chooseRoom' %}">Continue</a></td>
 	  </tr>
