--- a/reserveHotel/templates/reserveHotel/chooseRoom.html
+++ b/reserveHotel/templates/reserveHotel/chooseRoom.html
@@ -14,8 +14,8 @@
       <h2>Choose Room</h2>
       <table class="table">
 	<caption>Summary</caption>
-	<tr><td>Hotel name:</td><td></td></tr>
-	<tr><td>City:</td><td></td></tr>
+	<tr><td>Hotel name:</td><td>{{hotel_name}}</td></tr>
+	<tr><td>City:</td><td>{{hotel_name}}</td></tr>
       </table>
 
       <form class="" action="{% url 'rh:roomConfirm' %}"
