--- a/reserveHotel/templates/reserveHotel/searchResult.html
+++ b/reserveHotel/templates/reserveHotel/searchResult.html
@@ -31,7 +31,7 @@
 	    {% csrf_token %}	    
 	    <input type="hidden" name="hotel_name" value="{{hotel.hName}}" />
 	  <tr><td>{{hotel.hName}}</td>
-	    <td><input type="submit" class="btn btn-middle"
+	    <td><input type="submit" class="btn btn-middle btn-primary"
 		       value="Continue" /></td>
 	  </tr>
 	  {% endfor %}
