--- a/reserveHotel/templates/reserveHotel/payment.html
+++ b/reserveHotel/templates/reserveHotel/payment.html
@@ -15,7 +15,7 @@
       <table class="table">
 	<caption>Summary</caption>
 	<tr><td>Items</td><td>Total</td></tr>
-	<tr><td>{{hotel_name}}</td><td>{{total}}</td></tr>
+	<tr><td>{{room_list}}</td><td>{{total_price}}</td></tr>
 	<tr><td><td><a href="{% url 'rh:over' %}">Pay!</a></td></tr>
       </table>
     </div>
